# quadrupedal_foothold_planner

./: LICENSE  README.md  my.txt
foothold_planner/: CMakeLists.txt  GUIDE.txt  package.xml
foothold_planner/config/: foothold_planner.yaml
foothold_planner/include/foothold_planner/: FootholdPlanner.hpp
foothold_planner/launch/: all.launch  load_laikago_model.launch  main.launch  mapping.launch  record_globalfootholds.launch
foothold_planner/src/: FootholdPlanner.cpp  FootholdPlanner_gradient.cpp  Untitled-1.cpp  foothold_planner_node.cpp  map_tf.cpp  nlopt_ros.cpp  pointcloud.cpp  save_em_tm.cpp
foothold_planner/srv/: GlobalFootholdPlan.srv
foothold_planner_msgs/: CMakeLists.txt  package.xml
foothold_planner_msgs/msg/: Foothold.msg  GlobalFootholds.msg
log/: latest_list
